--- a/3_norm_viz_clustering.Rmd
+++ b/3_norm_viz_clustering.Rmd
@@ -180,6 +180,8 @@ so[["RNA"]] <- SetAssayData(so[["RNA"]],
                               slot = "data", 
                               new.data = logcounts(sce))
 
+#so@assays$RNA@data <- logcounts(sce)
+
 so$sizeFactors <- sizeFactors(sce)
 
 ```
@@ -201,17 +203,18 @@ Seurat provides a function to help identify these genes, `FindVariableGenes`. Ra
 
 
 ```{r, pkg_data, message = F, fig.height=5, fig.width=6}
-so <- FindVariableFeatures(so,selection.method = "vst")
+so <- FindVariableFeatures(so, selection.method = "vst")
 
 VariableFeaturePlot(so) 
 
 so@assays$RNA@var.features[1:10]
+
+VariableFeatures(so)[1:10]
 ```
 
 An alternative approach uses the Bioconductor package [`M3Drop`](https://www.bioconductor.org/packages/release/bioc/html/M3Drop.html). This approach does not model the variance in the data, but rather uses the information about dropouts to identify genes that have high variance. Specifically there is a clear relationship between the dropout rate and the abundance of a gene.
 
 ```{r}
-
 counts <- GetAssayData(so, "counts")
 
 # dropout rate per gene
@@ -278,8 +281,11 @@ Do these approaches really extract meaningful genes?
 
 ```{r, eval = FALSE, fig.width=8, fig.height=8}
 library(ComplexHeatmap)
+
+input_matrix <- GetAssayData(so, "data")[shared_hvgs[1:50], ]
+  
 # pseudocode
-Heatmap(input_matrix, show_column_names = FALSE)
+Heatmap(as.matrix(input_matrix), show_column_names = FALSE)
 ```
 
 ## Scaling
@@ -316,7 +322,7 @@ Heatmap(as.matrix(to_plot),
 
 ## Performing dimensionality reduction and clustering: PCA
 
-Heatmaps are useful for visualizing small numbers of genes (10s or 100s), but quickly become impractical for larger single cell datasets due to high dimensionality (1000s of cells X 20000 genes). 
+Heatmaps are useful for visualizing small numbers of genes (10s or 100s), but quickly become impractical for larger single cell datasets due to high dimensionality (1000s of cells X 20000 genes).
 
 Dimensionality reduction techniques are used in single cell data analysis generally for two purposes:
 
@@ -372,7 +378,10 @@ To see which genes are most strongly associated with the PCs you can use the `Vi
 
 
 ```{r, pca_loadings, message = F, fig.height=7, fig.width=9}
-VizDimLoadings(object = so, dims = 1:3, balanced = TRUE, ncol = 3)
+VizDimLoadings(object = so, 
+               dims = 1:3, 
+               balanced = TRUE, 
+               ncol = 3)
 ```
 
 
@@ -491,7 +500,7 @@ EXERCISE: The perplexity paramter is key to producing a good visualization. Gene
 ```{r echo = FALSE, eval = FALSE, fig.width=12, fig.height=8}
 # run on multiple perplexities
 
-ps <- c(2, 25, 250)
+ps <- c(2, 250)
 
 lapply(ps,
        function(x) {
@@ -500,7 +509,7 @@ lapply(ps,
                  perplexity = x) %>%
            DimPlot(., reduction = "tsne")
        }) %>%
-  plot_grid(plotlist = ., ncol = 3)
+  plot_grid(plotlist = ., ncol = 2)
 
 ```
 
@@ -567,7 +576,7 @@ input_data <- t(as.matrix(GetAssayData(so, "data"))[VariableFeatures(so), ])
 df_map <- DiffusionMap(input_data)
  
 palette(cube_helix(6))
-plot(df_map, 1:2, col = so@meta.data$percent_mito)
+plot(df_map, 3:4, col = so@meta.data$nFeature_RNA)
 
 # See plotting options
 #?plot.DiffusionMap
@@ -635,6 +644,8 @@ so <- FindClusters(so, resolution = 0.5, verbose = FALSE)
 
 so$RNA_snn_res.0.5 %>% head()
 so$seurat_clusters %>% head()
+
+DimPlot(so, reduction = "umap")
 ```
 
 **EXERCISE: Resolution and k.param are key parameters, what effect does varying them have on the clustering? Try a few resolution settings between 0.05 and 1 and k.param settings between 5 to 100.** 
@@ -705,7 +716,6 @@ Some guidelines:
 Hierarchical clustering can be used to visualize the relationships between clusters. The average expression of each cluster is computed then the distances between the clusters are used for hierarchical clustering.
 
 ```{r}
-
 Idents(so) <- "RNA_snn_res.0.5"
 so <- BuildClusterTree(so)
 
